Trying to fix padding on firefox

--- a/public/material.css
+++ b/public/material.css
@@ -231,7 +231,14 @@ label#attach-media-button {
 }
 
 main#content {
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 0px;
+}
+
+div#chat-log {
+    padding-bottom: 10px;
 }
 
 form#compose .mdl-grid {
